# steno

./: .gitignore  LICENSE  LICENSES.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
docs/: STENO-V1-AGENT-HANDOFF.md  STENO-V1-SPEC.md  STENO-VISION.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: capture.rs  encode.rs  meter.rs  mixer.rs  mod.rs  resample.rs  system.rs  system_linux.rs  system_windows.rs
