[package]
name = "steno"
version = "0.0.0"
description = "Local-first meeting recorder for macOS, Windows, and Linux."
authors = ["Chirag Patnaik <dev@nakli.tech>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/stenoapp/steno"

[lib]
name = "steno_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
audiopus = "0.2"
# audiopus 0.2 transitively pulls audiopus_sys 0.1.x; pin the same major
# range with the `static` feature so libopus is built/linked from source
# via cmake (no system libopus required on any platform).
audiopus_sys = { version = "0.1", features = ["static"] }
ogg = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
