[package]
name = "steno"
version = "0.0.0"
description = "Local-first meeting recorder for macOS, Windows, and Linux."
authors = ["Chirag Patnaik <dev@nakli.tech>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/stenoapp/steno"

[lib]
name = "steno_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
# SpaceManiac's `opus` crate uses `opusic-sys` which builds libopus from
# source via cmake (preinstalled on all GH runners). Avoids the
# autoconf/automake/libtool toolchain that audiopus_sys requires.
opus = "0.3"
ogg = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
